# Github-Productivity-App

./: package-lock.json  package.json
python/: fetch_github_profile_stats.py
src/: ai-wrapper.js  dashboard.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: core.json  dialog.json  fs.json  process.json
src-tauri/src/: analytics.rs  db.rs  economics.rs  github.rs  lib.rs  main.rs
