[package]
name = "github-productivity-app"
version = "0.1.0"
description = "AI Productivity Impact App"
authors = ["Andrew Kieckhefer"]
edition = "2021"

[lib]
name = "github_productivity_app_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
